--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,13 +1,13 @@
 name: CI
 
 on:
+  pull_request:
   push:
     branches:
       - main
-  pull_request:
 
 jobs:
-  test-and-vet:
+  test:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -16,13 +16,17 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v5
         with:
-          go-version: "1.22.5"
+          go-version-file: go.mod
+          cache: true
 
-      - name: Download dependencies
-        run: go mod download
+      - name: Verify formatting
+        run: |
+          files="$(gofmt -l $(find . -type f -name '*.go' -not -path './vendor/*'))"
+          if [ -n "$files" ]; then
+            echo "Unformatted Go files:"
+            echo "$files"
+            exit 1
+          fi
 
       - name: Run tests
         run: go test ./...
-
-      - name: Run vet
-        run: go vet ./...
